--- a/refs.bib
+++ b/refs.bib
@@ -36,6 +36,58 @@
 	publisher={SIAM}
 }
 
+@inproceedings{papandreou2011perturb,
+	title={Perturb-and-map random fields: Using discrete optimization to learn and sample from energy models},
+	author={Papandreou, George and Yuille, Alan L},
+	booktitle={2011 International Conference on Computer Vision},
+	pages={193--200},
+	year={2011},
+	organization={IEEE}
+}
+
+@article{giovannetti2008quantum,
+	title={Quantum random access memory},
+	author={Giovannetti, Vittorio and Lloyd, Seth and Maccone, Lorenzo},
+	journal={Physical review letters},
+	volume={100},
+	number={16},
+	pages={160501},
+	year={2008},
+	publisher={APS}
+}
+
+@article{kielpinski2002architecture,
+	title={Architecture for a large-scale ion-trap quantum computer},
+	author={Kielpinski, David and Monroe, Chris and Wineland, David J},
+	journal={Nature},
+	volume={417},
+	number={6890},
+	pages={709--711},
+	year={2002},
+	publisher={Nature Publishing Group}
+}
+
+@article{erhard2019characterizing,
+	title={Characterizing large-scale quantum computers via cycle benchmarking},
+	author={Erhard, Alexander and Wallman, Joel J and Postler, Lukas and Meth, Michael and Stricker, Roman and Martinez, Esteban A and Schindler, Philipp and Monz, Thomas and Emerson, Joseph and Blatt, Rainer},
+	journal={Nature communications},
+	volume={10},
+	number={1},
+	pages={1--7},
+	year={2019},
+	publisher={Nature Publishing Group}
+}
+
+@article{roberts2001optimal,
+	title={Optimal scaling for various Metropolis-Hastings algorithms},
+	author={Roberts, Gareth O and Rosenthal, Jeffrey S},
+	journal={Statistical science},
+	volume={16},
+	number={4},
+	pages={351--367},
+	year={2001},
+	publisher={Institute of Mathematical Statistics}
+}
 
 
 @article{gelman1992inference,
