--- a/refs.bib
+++ b/refs.bib
@@ -101,6 +101,24 @@
 	publisher={Institute of Mathematical Statistics}
 }
 
+  @Manual{rlang,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2021},
+    url = {https://www.R-project.org/},
+  }
+
+@Book{ggplot,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+
 
 @inproceedings{salmon2011parallel,
 	title={Parallel random numbers: as easy as 1, 2, 3},
