discussion first pass

--- a/refs.bib
+++ b/refs.bib
@@ -110,6 +110,45 @@
     url = {https://www.R-project.org/},
   }
 
+@article{baritompa2005grover,
+	title={Grover's quantum algorithm applied to global optimization},
+	author={Baritompa, William P and Bulger, David W and Wood, Graham R},
+	journal={SIAM Journal on Optimization},
+	volume={15},
+	number={4},
+	pages={1170--1184},
+	year={2005},
+	publisher={SIAM}
+}
+
+@article{farhi2014quantum,
+	title={A quantum approximate optimization algorithm},
+	author={Farhi, Edward and Goldstone, Jeffrey and Gutmann, Sam},
+	journal={arXiv preprint arXiv:1411.4028},
+	year={2014}
+}
+
+@incollection{liu2001theoretical,
+	title={A theoretical framework for sequential importance sampling with resampling},
+	author={Liu, Jun S and Chen, Rong and Logvinenko, Tanya},
+	booktitle={Sequential Monte Carlo methods in practice},
+	pages={225--246},
+	year={2001},
+	publisher={Springer}
+}
+
+@article{csillery2010approximate,
+	title={Approximate Bayesian computation (ABC) in practice},
+	author={Csill{\'e}ry, Katalin and Blum, Michael GB and Gaggiotti, Oscar E and Fran{\c{c}}ois, Olivier},
+	journal={Trends in ecology \& evolution},
+	volume={25},
+	number={7},
+	pages={410--418},
+	year={2010},
+	publisher={Elsevier}
+}
+
+
 @Book{ggplot,
     author = {Hadley Wickham},
     title = {ggplot2: Elegant Graphics for Data Analysis},
